# book-game

./: .clang-format  .gitignore  CMakeLists.txt  GAMEINTRO.md  GAMERULES.md  README.md  RUN_FROM_CLI.txt
data/paragraphs/: 1.txt  109.txt  112.txt  114.txt  116.txt  118.txt  12.txt  121.txt  172.txt  174.txt  177.txt  179.txt  183.txt  2.txt  203.txt  209.txt  217.txt  219.txt  22.txt  246.txt  247.txt  250.txt  254.txt  280.txt  292.txt  309.txt  31.txt  310.txt  314.txt  350.txt  352.txt  357.txt  370.txt  371.txt  375.txt  381.txt  396.txt  406.txt  410.txt  42.txt  (+27 more)
data/paragraphs/ru/: 1.txt  112.txt  114.txt  116.txt  172.txt  174.txt  179.txt  183.txt  2.txt  203.txt  209.txt  219.txt  22.txt  246.txt  247.txt  254.txt  280.txt  309.txt  31.txt  310.txt  314.txt  350.txt  357.txt  370.txt  371.txt  375.txt  381.txt  396.txt  406.txt  42.txt  446.txt  447.txt  448.txt  46.txt  483.txt  510.txt  514.txt  516.txt  517.txt  52.txt  (+12 more)
info/: todo.txt
src/: actions.cpp  comment.cpp  creature.cpp  file_reader.cpp  game.cpp  game_plays.cpp  game_steps.cpp  inventory.cpp  item.cpp  log.cpp  main.cpp  main_test.h  object_factory.cpp  path.cpp  random.cpp
src/data/paragraphs/: 109.txt  112.txt  118.txt  12.txt  121.txt  177.txt  209.txt  217.txt  247.txt  250.txt  292.txt  352.txt  406.txt  410.txt  43.txt  447.txt  486.txt  529.txt  560.txt  6.txt  611.txt  80.txt
src/headers/: actions.h  colormod.h  comment.h  creature.h  file_reader.h  game.h  game_plays.h  game_steps.h  globals.h  inventory.h  item.h  log.h  object_factory.h  path.h  random.h
